# Telescode

./: .coderabbit.yaml  .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
repos/: README.md
src/: db.cpp  db.h  main.cpp  parser_main.cpp
src/parser/: CsvExporter.cpp  CsvExporter.h  IParser.h  ParseResult.h  PythonParser.cpp  PythonParser.h
tests/: run_parser_test.sh
tests/fixtures/: imports_only.py  module_functions.py  simple_class.py
tests/output/: base_class.csv  class.csv  file.csv  function.csv  link.csv  param.csv
